[package]
name = "app"
version = "0.1.0"
authors = ["Keisuke Umeno <9renpoto+g59@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "frontend"
path = "src/main.rs"

[dependencies]
console_error_panic_hook = "0.1"
leptos = { version = "0.6", features = ["csr"] }
worker = { version = "0.8" }
worker-macros = { version = "0.8" }
