[workspace]
members = ["apps/web", "apps/worker", "crates/application", "crates/domain"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/9renpoto/.59-rs"
version = "0.1.0"

[workspace.dependencies]
console_error_panic_hook = "0.1"
gloo-net = "0.6"
leptos = { version = "0.6", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
worker = { version = "0.8", features = ["d1"] }
worker-macros = "0.8"
