[package]
name = "web"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "web"
path = "src/main.rs"

[dependencies]
application = { path = "../../crates/application" }
console_error_panic_hook.workspace = true
gloo-net.workspace = true
leptos.workspace = true
serde_json.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
